# ACS_Lab3_Parallel_programming_int

./: .gitignore  CMakeLists.txt  README.md  config.h  multi_thread.cpp  out.txt  start.py
reports/: TimeResultsTable.xlsx
src/: multi_thread.cpp  single_thread.cpp
